# ABMpy

./: .gitignore  CMakeLists.txt  README.md  setup.py
CA_frame/CA_frame.xcodeproj/: project.pbxproj
CA_frame/CA_frame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CA_frame/CA_frame.xcodeproj/project.xcworkspace/xcuserdata/matin.xcuserdatad/: UserInterfaceState.xcuserstate
docs/: CMakeLists.txt
include/CA/: CMakeLists.txt  agent.h  frame.h  mesh.h  model.h  patch.h  settings.h  toolbox.h
src/: CMakeLists.txt  agent.h  cpp_logs.h  general.h  main.cpp  model.cpp  model.h  patch.h  settings.h  toolbox.h
tests/c++/: CMakeLists.txt  test_CA.cpp
tests/python/: template_test.py  tests_test.py
